--- a/index.html
+++ b/index.html
@@ -1,32 +1,71 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>intBet</title>
+    <link rel="stylesheet" href="css/style" type="text/css" media="all" />
+
 </head>
+
 <body>
     <header>
         <nav>
             <div class="left_block">
-                    <a href="#">intbet</a>
+                <a href="#">intbet</a>
             </div>
             <div class="mid_block">
-                    <a href="#">intbet</a>
-                    <a href="#">CSS</a> 
-                    <a href="#">JavaScript</a> 
-                    <a href="#">jQuery</a>
+                <a href="#">SPOR</a>
+                <a href="#">BAHİS</a>
+                <a href="#">CASİNO</a>
+                <a href="#">POKER</a>
+                <a href="#">3D SLOTLAR</a>
+                <a href="#">POKER</a>
+                <a href="#">BONUSLAR</a>
+                <a href="#">RED BUTTON</a>
             </div>
-            
-           
         </nav>
     </header>
     <main>
-
+        <div class="container">
+            <section id="content">
+                <form action="">
+                    <div class="form_login">
+                        <div>
+                            <input placeholder="Şifreniz" required="" id="username" type="text">
+                        </div>
+                        <div>
+                            <input placeholder="Kulanıcı adınız" required="" id="password" type="password">
+                        </div>
+                        <div>
+                            <input value="GİRİŞ YAP" type="submit">
+                            <a href="#">Şifrenizi mi unuttunuz?</a>
+                        </div>
+                    </div>
+                </form>
+                <div class="green_button">
+                        <a href="#">Üye olmadınız mı ?</a>
+                        <input type="submit" value="HEMEN ÜYE OLUN">
+                </div>
+            </section>
+            <div class="logo_text">
+                <span>%100 YATIRIM BONUSU !
+                        300 TL ANINDA 
+                        HESABINDA !</span>
+            </div>
+            <div class="cards">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+        </div>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
