--- a/index.html
+++ b/index.html
@@ -23,20 +23,25 @@
                     </div>
                     <div class="mid_block">
                         <a href="#">SPOR</a>
-                        <a href="#">BAHİS</a>
+                        <a href="#" class="top_text">BAHİS
+                            <span>canlı</span>
+                        </a>
                         <a href="#">CASİNO</a>
-                        <a href="#">POKER</a>
+                        <a href="#" class="top_text">POKER
+                            <span>canlı</span>
+                        </a>
                         <a href="#">3D SLOTLAR</a>
                         <a href="#">POKER</a>
-                        <a href="#">BONUSLAR</a>
+                        <a href="#" class="top_text">BONUSLAR
+                            <span class="top_text_right">özel</span>
+                        </a>
                         <a href="#">RED BUTTON</a>
                     </div>
                 </nav>
             </header>
+            <main>
         <div class="container">
-    
-    <main>
-        
+   
             <section id="content">
                 <form action="">
                     <div class="form_login">
