--- a/index.html
+++ b/index.html
@@ -35,36 +35,36 @@
                         <a href="#" class="top_text">BONUSLAR
                             <span class="top_text_right">özel</span>
                         </a>
-                        <a href="#">RED BUTTON</a>
+                        
                     </div>
+                    <a href="#" class="navbar_link">Canli Yardim</a>
                 </nav>
             </header>
             <main>
         <div class="container">
    
             <section id="content">
-                <form action="">
+
+                <form action="" class="login clearfix">
                     <div class="form_login">
                         <div>
-                            <p>Giriş yapın</p>
+                            <p class="form_title">Giriş yapın</p>
                             <input placeholder="Şifreniz" required="" id="username" type="text">
-                        </div>
-                        <div>
                             <input placeholder="Kulanıcı adınız" required="" id="password" type="password">
-                        </div>
-                        <div>
-                            <input value="GİRİŞ YAP" type="submit">
                             <a href="#">Şifrenizi mi unuttunuz?</a>
+                            <button type="submit" class="submit_button">GİRİŞ YAP</button>
                         </div>
                     </div>
                 </form>
-                <div class="green_button">
+                <div class="register_button">
                     <a href="#">Üye olmadınız mı ?</a>
-                    <input type="submit" value="HEMEN ÜYE OLUN">
+                    <button type="submit" class="reg_button">HEMEN ÜYE OLUN</button>
                 </div>
+              
             </section>
             <div class="logo_text">
-                <span>%100 YATIRIM BONUSU !300 TL ANINDA HESABINDA !</span>
+                    <p class="margin_p_first">%100 YATIRIM <span class="bold_text">BONUSU !</span></p>
+                    <p class="margin_p_second"><span class="bold_text">300 TL</span> ANINDA HESABINDA !</p>
             </div>
             <div class="cards">
                 <div class="card">
